# readahead-iterator

./: .gitignore  Cargo.toml  NEWS.md  README.md
.github/workflows/: release.yml  rust.yml
examples/: linecount.rs  sleepy.rs  unbounded-input.rs
src/: lib.rs
tests/: iterate.rs
