[package]
name = "readahead-iterator"
version = "0.1.0"
authors = ["Martin Pool <mbp@sourcefrog.net>"]
edition = "2018"
license = "MIT OR Apache-2.0"
description = "Readahead from an iterator on a separate thread, returning items in order and synchronously."
readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
